--- a/delivery-order-service.yml
+++ b/delivery-order-service.yml
@@ -24,5 +24,5 @@ spring:
         database-platform: org.hibernate.dialect.H2Dialect
         generate-ddl: false
         hibernate:
-            ddl-auto: none
+            ddl-auto: create
         show-sql: true
