--- a/delivery-zuul-proxy.yml
+++ b/delivery-zuul-proxy.yml
@@ -1,5 +1,17 @@
 server:
   port: 9094
+  
+eureka:
+  instance:
+    hostname: localhost
+    port: 9091
+  client:
+    registerWithEureka: true
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+  server:
+    wait-time-in-ms-when-sync-empty: 3000
 
 zuul:
   ignored-services:
